# sCrapper

./: CMakeLists.txt  TaskManager.c  configFile.sconf  configuration.c  counterFile.c  curlRequest.c  deph.c  file.c  file.h  file1.txt  file2.txt  header.h  main.c  manager.h  parser.c  parser.h  routerFile.c  scrapper.c  taskManager.c  testg.txt
